# mergerfs-rs

./: .gitignore  .gitmodules  CLAUDE.md  Cargo.toml  HARD_LINK_IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_STATUS.md  LICENSE  LOGGING_IMPLEMENTATION.md  RANDOM_POLICY_STATUS.md  README.md  TESTING.md  TEST_STATUS.md  TRACING_ENHANCEMENTS.md  debug_unlink.py  debug_unlink_trace.py  run_python_tests.sh  test.sh  test_access_manual.sh  test_filetype.rs  test_hard_link.sh
docs/: 01-architecture-overview.md  02-fuse-operations.md  03-policy-system.md  04-configuration-system.md  05-concurrency-patterns.md  06-filesystem-abstraction.md  07-data-structures-memory.md  08-error-handling-edge-cases.md  ACCESS_OPERATION_DESIGN.md  BRANCH_MODE_IMPLEMENTATION.md  DIRECT_IO_DESIGN.md  DIRECT_IO_IMPLEMENTATION_PLAN.md  EPLFS_POLICY_DESIGN.md  EPMFS_POLICY_DESIGN.md  FALLOCATE_DESIGN.md  HARD_LINK_INODE_CACHE_REFACTOR.md  INODE_MANAGEMENT_REFACTOR.md  LEAST_USED_SPACE_POLICY_DESIGN.md  LINK_OPERATION_DESIGN.md  MKNOD_OPERATION_DESIGN.md  MOVEONENOSPC_DESIGN.md  MULTI_THREADED_FUSE_DESIGN.md  OPENDIR_RELEASEDIR_DESIGN.md  POLICY_IMPLEMENTATION_STATUS.md  SPACE_CALCULATION.md  TESTING_SPACE_POLICIES.md  TRACING_AND_DEBUGGING.md  fsyncdir_implementation.md  fuse-operations-comparison.md  inode_calculation.md  path_preservation_implementation.md  rename-operation-design.md  rename-strategies-detailed.md  (+3 more)
python_tests/: README.md  TRACE_BASED_TESTING.md  TRACE_IMPLEMENTATION_SUMMARY.md  TRACE_MONITORING.md  benchmark_trace_vs_sleep.py  conftest.py  pyproject.toml  pytest-full.ini  pytest-quick.ini  pytest.ini  run_tests.py  run_trace_comparison.py  run_with_trace.py  test_access.py  test_access_basic.py  test_access_debug.py  test_access_simple.py  test_debug_mount.py  test_direct_io.py  test_directory_handles.py  test_eplfs_policy.py  test_epmfs_policy.py  test_fallocate.py  test_fsyncdir.py  test_hard_links.py  test_inode_calc.py  test_log_capture_debug.py  test_log_format.py  test_lus_policy.py  test_lus_policy_clean.py  test_lus_trace.py  test_mfs_debug.py  test_mknod.py  test_moveonenospc.py  test_path_preservation.py  test_rename_property.py  test_rename_property_simple.py  test_rename_strategies.py  test_runtime_config.py  test_runtime_config_enhanced.py  (+11 more)
python_tests/docs/: TEST_FIXTURE_IMPROVEMENTS.md  link_implementation.md
python_tests/lib/: fuse_manager.py  simple_trace.py  timing_utils.py  tmpfs_manager.py
python_tests/scripts/: cleanup_tmpfs.sh  setup_tmpfs.sh
python_tests/tests/: test_action_policies.py  test_branch_modes.py  test_concurrent_access.py  test_concurrent_access_trace.py  test_existing_path_policies.py  test_file_handles_property.py  test_fuzz_foundation.py  test_hard_links.py  test_lus_policy.py  test_mfs_policy.py  test_mfs_policy_trace.py  test_moveonenospc.py  test_pfrd_policy.py  test_policy_behavior.py  test_property_based.py  test_random_policy.py  test_random_policy_trace.py  test_random_policy_unit.py  test_rename.py  test_runtime_config.py  test_runtime_config_space.py  test_search_policies.py  test_search_policies_comprehensive.py  test_special_files.py  test_statfs_property.py
(+63 files in other folders)
