[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mergerfs-rs-tests"
version = "0.1.0"
description = "Python testing framework for mergerfs-rs FUSE filesystem"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "pytest>=7.0.0",
    "hypothesis>=6.80.0",
    "psutil>=5.9.0",
    "pytest-xdist>=3.0.0",
    "pytest-timeout>=2.1.0",
    "pytest-benchmark>=4.0.0",
    "xattr>=0.10.0",
]

[project.optional-dependencies]
dev = [
    "black",
    "isort",
    "flake8",
    "mypy",
]

[tool.hatch.build.targets.wheel]
packages = ["lib"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--verbose",
    "--tb=short",
    "--strict-markers",
    "--disable-warnings",
    "--timeout=30",
]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "policy: Policy behavior tests",
    "property: Property-based tests",
    "fuzz: Fuzz tests",
    "slow: Slow tests",
    "concurrent: Concurrent access tests",
    "stress: Stress tests",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

[tool.black]
line-length = 100
target-version = ["py38"]

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true